--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  font-family: "Inter", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  /* font-family: "Ubuntu", sans-serif; */
 }
 
 .App-logo {
