--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,6 +8,10 @@ p {
   font-family: "Ubuntu", sans-serif;
 }
 
+#experience-photo {
+  width: 300px;
+}
+
 .board-container {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -28,19 +32,30 @@ p {
 
 .board-item_checked {
   pointer-events: none;
-}
-
-.board-item_photo-overlay {
-  background-color: rgba(0, 0, 0, 0.2);
-  background-size: contain;
-  opacity: 0.6;
-}
-
-#experience-photo {
-  width: 300px;
+  overflow: hidden;
+  position: relative;
 }
 
 .board-item_photo-cover {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100px;
+  object-fit: cover;
+  z-index: 3;
+  opacity: 0.7;
+  width: 100px;
+  height: auto;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.item-text_checked {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 5;
+  font-weight: 900;
+  font-family: system-ui;
 }
