--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -48,13 +48,12 @@ p {
 }
 
 .item-text_checked {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
   border-radius: 5px;
   z-index: 5;
-  font-weight: 900;
-  font-family: system-ui;
+  font-family: system-ui; */
 }
