--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,4 @@
-#experience-photo {
-  width: 300px;
-}
-  
+
 .board-item_checked {
   overflow: hidden;
   position: relative;
@@ -26,4 +23,16 @@
   left: 0;
   width: 100%;
   height: 150px;
+}
+
+/* TODO: integrate to code */
+.MuiBox-root .css-rvzmtt {
+
+  background-color: white;
+  margin-left: -30px;
+  margin-right: -30px;
+  padding: 50px 25px 1px;
+  height: 75px;
+  margin-top: -30px;
+  margin-bottom: 0;
 }
